Spacing fix related to boilerplate update

--- a/src/ecommerce/components/navigation/footer/_ecoFooter.scss
+++ b/src/ecommerce/components/navigation/footer/_ecoFooter.scss
@@ -38,6 +38,7 @@
   &__additions {
     grid-column: span 3;
     display: flex;
+    justify-content: space-evenly;
     gap: f.rem(30);
     width: 100%;
     padding: f.rem(50);
